k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-csharp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-csharp
  template:
    metadata:
      labels:
        app: backend-csharp
    spec:
      containers:
      - name: backend-csharp
        image: projet_devops-backend-csharp:v10
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /api/students
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/students
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-csharp
spec:
  selector:
    app: backend-csharp
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
