k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nextjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-nextjs
  template:
    metadata:
      labels:
        app: frontend-nextjs
    spec:
      containers:
      - name: frontend-nextjs
        image: projet_devops-frontend-nextjs:v4
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nextjs
spec:
  selector:
    app: frontend-nextjs
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
