k8s/efrei-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efrei-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: efrei.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-nextjs
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-csharp
            port:
              number: 5000
